Better filename in title - add navigation cmds